I fixed the page alignment and made it responsive

--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
 }
 
 .hero .hero-content h1{
-    font-size: 70px;
+    font-size: 50px;
 
 }
 
@@ -84,9 +84,14 @@ body {
 
 .hero {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    gap: 70px;
     align-items: center;
+
 }
+
+
+
 
 .supporters .collabs-text{
     text-align: center;
@@ -157,6 +162,7 @@ body {
     color: #fff;
     padding: 10px 15px;
     border-radius: 25px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.2);
 
 
 }
@@ -244,8 +250,9 @@ body {
 
 .three-cards{
     display: flex;
-    gap:28px;
-    margin: 30px 50px;
+    justify-content: center;
+    gap:28px; 
+    margin: 30px 70px;
     align-items: center;
 }
 
@@ -595,6 +602,10 @@ body {
     display: none;
 }
 
+.mobile-links.show {
+    display: block;
+}
+
 .mobile-links ul{
     list-style: none;
     color: darkslategray;
@@ -607,6 +618,13 @@ body {
     margin-bottom: 2px;
 }
 
+ .rating-text{
+    display:none
+}
+
+
+
+ 
 
 @media(max-width: 480px){
     .container {
@@ -631,14 +649,158 @@ body {
         
     }
 
-    .menu{
+    .menu {
         display: block;
         padding: 0;
     }
 
-    .mobile-links{
-    display: block;
+    .hero-image{
+        display: none;
+    }
+
+    .hero .hero-content h1{
+        font-size: 43px;
+    }
+
+    .hero {
+        /* padding-left: 20px; */
+    }
+
+    .heroimage{
+        width: 200px;
+        margin-bottom: -5px;
+    }
+
+    .hero .hero-text {
+        font-size: 14px;
+    }
+
+    .supporters{
+        display: block;
+        margin-top: -12px;
+    }
+
+    .supporters-name ul{
+        display: block;
+        
+    }
+
+    .supporters-name ul li{
+        margin-bottom: 5px;
+        margin-left: 12px;
+        font-size: 20px;
+        font-weight: 200;
+    }
+
+    .supporters-logo{
+        width: 35px;
+        margin-right: 12px;
+    }
+
+    .rate{
+        display: block;
+    }
+
+    
+
+    .rate{
+        margin: -9px;
+    }
+    .rate h2{
+        margin-top: 43px;
+        margin-left: 10px;
+        margin-bottom: 0px;
+        padding: 2px 35px;
+        display: block;
+    }
+
+    .rate .support-text{
+        margin-left: 28px;
+        margin-right: 22px;
+        font-size: 19px;
+    }
+
+    .star-rating{
+        display: flex;
+        align-items: center;
+        gap: 25px;
+        margin-left: 70px;
+    }
+
+    .data{
+        display: block;
+    }
+
+    .values{
+        display: block;
+        gap: 10px;
+        text-align: center;
+    }
+
+    .publishings h3{
+        font-size: 18px;  
+        margin-top: 12px;
+    }
+
+    .publish-text{
+        font-size: 15px;
+    }
+
+
+     .analysiss h3{
+        font-size: 18px;  
+    }
+
+    .analysis-text{
+        font-size: 15px;
+    }
+
+     .engagements h3{
+        font-size: 18px;  
+    }
+
+    .engagement-text{
+        font-size: 15px;
+    }
+
+    .features .features-header{
+        display: block;
+        text-align: center;
+        margin-top: 53px;
+    }
+    
+    .features .features-images{
+        display: block;
+        margin-left: 23px;
+        margin-top: 14px;
+        text-align: center;
+    }
+
+    .benefit-images{
+        display: none;
+        
+    }
+
+    .benifit{
+        display: block;
+        margin-left: 25px;
+    }
+
+    .option-boldtext{
+        display: block;
 
     }
 
+    .option-smalltext{
+        font-size: 5px;
+        margin-left: 12px;
+    }
+
+    .three-cards {
+        display: block;
+    }
+
+    .card1, .card2, .card3{
+        margin-bottom: 40px;
+    }
 }
